# asynclang

./: README.md  pyproject.toml
backend/: CLAUDE.md  hello.py  main.py  message_history.json  pyproject.toml  test_thread.py
backend/app/: main.py
backend/app/api/: agent.py  dtos.py  router.py
backend/app/config/: config.py
backend/app/db/: crud.py  models.py
backend/app/entities/: __init__.py  thread.py
backend/sandbox/: dump.txt  message_history.json  openai_thinking_part.py  openaiagent_mcp_client.py  pydanticai_mcp_client.py  whattime.py
backend/src/api/routes/: __init__.py  thread_routes.py
backend/src/application/dtos/: __init__.py  thread_dto.py
backend/src/application/services/: __init__.py  thread_service.py
backend/src/domain/entities/: __init__.py  message_parts.py  thread.py
backend/src/domain/repositories/: __init__.py  thread_repository.py
backend/src/domain/services/: llm_service.py
backend/src/domain/value_objects/: message_role.py
backend/src/infrastructure/database/: __init__.py  database.py  models.py
backend/src/infrastructure/repositories/: __init__.py  thread_repository_impl.py
backend/src/infrastructure/services/: pydantic_ai_service.py
backend/tests/unit/domain/: test_thread.py
mcp_server/: pyproject.toml
mcp_server/src/: add.py  confg.json  event_scheduler.py  notifier.py  notify_fastmcp.py  whattime.py
