[project]
name = "asynclang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

[tool.ruff]
lint.select = ["E", "F", "I", "W"]
line-length = 88

[tool.ruff.lint.per-file-ignores]
# allow unused imports in __init__.py
"__init__.py" = ["F401"]