[project]
name = "asynclang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "mcp[cli]>=1.12.2",
    "openai-agents>=0.2.4",
    "pydantic-ai>=0.4.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.0",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

[tool.ruff]
lint.select = ["E", "F", "I", "W"]
line-length = 88

[tool.ruff.lint.per-file-ignores]
# allow unused imports in __init__.py
"__init__.py" = ["F401"]
